# notething

./: .env.development  .env.production  index.html  package-lock.json  package.json  pyproject.toml  wsgi.py
app/: __init__.py
app/controllers/: auth.py  notes.py  settings.py
app/models/: notes.py  settings.py
app/templates/: auth.html  base.html  categories.html  create.html  create_category.html  index.html  note.html  settings.html
app/templates/components/: modal.html
app/utils/: __init__.py
migrations/versions/: 040b56393c94_.py  0f31b525ca68_.py  1aac8aec2847_.py  d09d6ed9c6b8_.py
src/: index.js  storage.js
src/components/: Card.jsx  Modal.jsx  Nav.jsx
src/css/: style.css
src/page/: App.jsx  Compose.jsx  Load.jsx  Post.jsx  Profile.jsx
