[tool.poetry]
name = "notething"
version = "0.1.0"
description = ""
authors = ["grandmaster <grandmaster75382@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"
flask-migrate = "^4.0.7"
pytz = "^2024.2"
markdown = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
